Update .gitignore for generated Python files
Tired of seeing this trash in my git status responses

	cilantro/networking/__pycache__/masternode.cpython-36.pyc
	cilantro/networking/__pycache__/witness.cpython-36.pyc
	cilantro/proofs/__pycache__/
	cilantro/proofs/pow/__pycache__/
	cilantro/serialization/__pycache__/
	tests/__pycache__/
	tests/cilantro/__pycache__/
	tests/cilantro/networking/__pycache__/

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+#Virtual Python Environments
 /venv
+
+#Integrated Development Environments
 /.idea
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
