--- a/cilantro/cilantro.conf
+++ b/cilantro/cilantro.conf
@@ -1,5 +1,14 @@
-[default]
-masternode_ip=127.0.0.1
-delegate_ip=127.0.0.1
-witness_ip=127.0.0.1
+[masternode]
+ip=127.0.0.1
+internal_port=9999
+external_port=8080
 
+[delegate]
+ip=127.0.0.1
+port=9999
+
+[witness]
+#ip=127.0.0.1
+host=127.0.0.1
+sub_port=9999
+pub_port=7777
