--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 before_install:
   - sudo apt-get install software-properties-common
 install: "python setup.py develop"
-script: LAMDEN_FOLDER_PATH=. NODE_INFO_JSON=~/node.info pytest -s tests
+script: 
 notifications:
   webhooks:
     - https://lamden-discord-travisci.herokuapp.com/webhook/
