--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
 python:
-  - "3.6"
+  - 3.6
 before_install:
   - sudo apt-get install software-properties-common
-install: "python setup.py develop"
+install:
+  - python setup.py install
+  - pip install coverage
 script: 
 notifications:
   webhooks:
