--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 before_install:
   - sudo apt-get install software-properties-common
 install:
-  - python setup.py install
+  - pip install -r requirements.txt
   - pip install coverage
 script: 
 notifications:
