--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 install:
   - pip install coverage
   - python setup.py develop
-script: python -m unittest discover -s /home/travis/virtualenv/python3.6.3/lib/python3.6/site-packages/cilantro/tests
+script: python -m unittest discover -s ./tests
 notifications:
   webhooks:
     - https://lamden-discord-travisci.herokuapp.com/webhook/
