reformatted logger output

--- a/cilantro/conf/cilantro_logger.ini
+++ b/cilantro/conf/cilantro_logger.ini
@@ -21,4 +21,4 @@ args=("../logs/cilantro.log",)
 
 
 [formatter_formatter]
-format=%(asctime)s %(name)-12s %(levelname)-8s %(message)s
+format=%(asctime)s %(pathname)-12s %(levelname)-8s %(message)s
