--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ twofish==0.3.0
 urllib3==1.22
 uvloop==0.9.1
 yarl==1.1.0
-zmq==0.0.0
 pytest-aiohttp==0.3.0
 ntplib==0.3.3
 pymongo==3.6.0
 ed25519
+ecdsa
