--- a/cilantro/conf/cilantro_logger.ini
+++ b/cilantro/conf/cilantro_logger.ini
@@ -19,4 +19,5 @@ args=("../logs/cilantro.log",)
 
 
 [formatter_formatter]
-format=%(asctime)s %(name)-2s PID: %(process)d %(levelname)-8s %(message)s
+format=%(asctime)s %(name)s[%(process)d] %(levelname)-2s %(message)s
+
