--- a/cilantro/conf/cilantro_logger.ini
+++ b/cilantro/conf/cilantro_logger.ini
@@ -19,5 +19,5 @@ args=("../logs/cilantro.log",)
 
 
 [formatter_formatter]
-format=%(asctime)s %(name)s[%(process)d] %(levelname)-2s %(message)s
+format=%(asctime)s,%(msecs)03d %(name)s[%(process)d] %(levelname)-2s %(message)s
 
