wip on new env wrappers

--- a/cilantro/config.json
+++ b/cilantro/config.json
@@ -48,5 +48,10 @@
       "num": 3,
       "port_start": "7000"
     }
+  },
+  "zmq_filters": {
+    "witness-masternode": 0,
+    "delegate-delegate": 1,
+    "masternode-delegate": 2
   }
 }
