--- a/cilantro/config.json
+++ b/cilantro/config.json
@@ -52,6 +52,7 @@
   "zmq-filters": {
     "witness-masternode": 0,
     "delegate-delegate": 1,
-    "masternode-delegate": 2
+    "masternode-delegate": 2,
+    "witness-delegate": 3
   }
 }
