--- a/cilantro/conf/cilantro_logger.ini
+++ b/cilantro/conf/cilantro_logger.ini
@@ -2,14 +2,14 @@
 keys=root
 
 [handlers]
-keys=file_handler,stdout_handler,stderr_handler
+keys=file_handler,stdout_handler
 
 [formatters]
 keys=formatter
 
 [logger_root]
 level=DEBUG
-handlers=file_handler,stdout_handler,stderr_handler
+handlers=file_handler,stdout_handler
 
 [handler_file_handler]
 class=FileHandler
@@ -17,18 +17,18 @@ level=DEBUG
 formatter=formatter
 args=("../logs/cilantro.log",)
 
-[handler_stdout_handler]
-class=StreamHandler
-level=DEBUG
-formatter=formatter
-args=(sys.stdout,)
-
 [handler_stderr_handler]
 class=StreamHandler
 level=DEBUG
 formatter=formatter
 args=(sys.stderr,)
 
+[handler_stdout_handler]
+class=StreamHandler
+level=DEBUG
+formatter=formatter
+args=(sys.stdout,)
+
 [formatter_formatter]
-format=%(asctime)s.%(msecs)03d %(name)s[%(process)d] %(levelname)-2s %(message)s
+format=%(asctime)s.%(msecs)03d %(name)s[%(process)d][%(processName)s] %(levelname)-2s %(message)s
 
