--- a/cilantro/config.json
+++ b/cilantro/config.json
@@ -4,7 +4,8 @@
     "proofs": "SHA3POW",
     "interpreters": "VanillaInterpreter",
     "significant-digits": 19,
-    "decimal-precision": 4
+    "decimal-precision": 4,
+    "max-uuid": 4294967295
   },
   "mongo-constants": {
     "db-name": "cilantro",
