--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ dill==0.2.7.1
 ecdsa==0.13
 ed25519==1.4
 idna==2.6
+git+https://github.com/Lamden/kademlia.git@master#egg=kademlia
+#rpcudp==3.0.0
 mysql-connector-python-rf==2.2.2
 ntplib==0.3.3
 plyvel==1.0.4
