docker changed ip-range to iprange

--- a/tests/vmnet/docker-compose.yml
+++ b/tests/vmnet/docker-compose.yml
@@ -4,7 +4,7 @@ networks:
     ipam:
       config:
       - gateway: 172.29.5.253
-        ip-range: 172.29.5.0/24
+        iprange: 172.29.5.0/24
         subnet: 172.29.0.0/16
 services:
   delegate_1:
@@ -17,8 +17,8 @@ services:
     - HOST_IP=172.29.7.1
     - SLOT_NUM=0
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
@@ -41,8 +41,8 @@ services:
     - HOST_IP=172.29.7.2
     - SLOT_NUM=1
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
@@ -65,8 +65,8 @@ services:
     - HOST_IP=172.29.7.3
     - SLOT_NUM=2
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
@@ -89,8 +89,8 @@ services:
     - HOST_IP=172.29.7.4
     - SLOT_NUM=3
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
@@ -112,8 +112,8 @@ services:
     - HOSTNAME=masternode
     - HOST_IP=172.29.5.1
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
@@ -135,8 +135,8 @@ services:
     - HOSTNAME=mgmt
     - HOST_IP=172.29.5.0
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
@@ -159,8 +159,8 @@ services:
     - HOST_IP=172.29.6.1
     - SLOT_NUM=0
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
@@ -183,8 +183,8 @@ services:
     - HOST_IP=172.29.6.2
     - SLOT_NUM=1
     - MASTERNODE=172.29.5.1
-    - WITNESS=172.29.6.1,172.29.6.2
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
+    - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
     - TEST_NAME=bootstrap
     image: cilantro_base
