--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,15 @@ aenum==2.0.8
 aiodns==1.1.1
 aiohttp==2.3.9
 aioprocessing==1.0.0
-coloredlogs==9.0
 Cython==0.28.1
-dill==0.2.7.1
-ecdsa==0.13
-ed25519==1.4
 idna==2.6
-git+https://github.com/Lamden/kademlia.git@master#egg=kademlia
+kade==1.0.2
 mysql-connector-python-rf==2.2.2
 ntplib==0.3.3
 plyvel==1.0.4
-py==1.5.3
 pycapnp==0.6.3
-pymongo==3.6.0
 PyMySQL==0.8.0
 PyNaCl==1.2.1
-PyPika==0.14.0
-PyYAML==3.12
 pytest==3.5.0
 pytest-aiohttp==0.3.0
 pyzmq==17.0.0
@@ -26,8 +18,6 @@ redis==2.10.6
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.2.6
-twofish==0.3.0
 urllib3==1.22
 uvloop==0.9.1
 yarl==1.1.0
--e git+https://github.com/Lamden/vmnet.git@master#egg=vmnet
