--- a/tests/vmnet/docker-compose.yml
+++ b/tests/vmnet/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -44,7 +44,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -68,7 +68,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -92,7 +92,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -115,7 +115,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -138,7 +138,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -162,7 +162,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -186,7 +186,7 @@ services:
     - DELEGATE=172.29.7.1,172.29.7.2,172.29.7.3,172.29.7.4
     - WITNESS=172.29.6.1,172.29.6.2
     - MGMT=172.29.5.0
-    - TEST_NAME=bootstrap
+    - TEST_NAME=vklookup
     image: cilantro_base.dev
     networks:
       cilantro:
