added static testnet info to config.json

--- a/cilantro/config.json
+++ b/cilantro/config.json
@@ -50,5 +50,22 @@
     "alpha": 3,
     "ksize": 20,
     "max-peers": 64
+  },
+  "test": {
+    "masternodes":
+            [
+              {"sk": "abcde554433", "vk": "a real vk", "ip":"172.12.1.0", "testnet-url": "127.0.0.1:1100"}
+            ],
+    "witnesses":
+            [
+              {"sk": "abcde554433", "vk": "a real vk", "ip":"172.12.1.0", "testnet-url": "127.0.0.1:1100"},
+              {"sk": "abcde554433", "vk": "a real vk", "ip":"172.12.1.0", "testnet-url": "127.0.0.1:1100"}
+            ],
+    "delegates":
+            [
+              {"sk": "abcde554433", "vk": "a real vk", "ip":"172.12.1.0", "testnet-url": "127.0.0.1:1100"},
+              {"sk": "abcde554433", "vk": "a real vk", "ip":"172.12.1.0", "testnet-url": "127.0.0.1:1100"},
+              {"sk": "abcde554433", "vk": "a real vk", "ip":"172.12.1.0", "testnet-url": "127.0.0.1:1100"}
+            ]
   }
 }
