pump works /w mode not drawing from a prob dist.

--- a/tests/vmnet/docker-compose.yml
+++ b/tests/vmnet/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -44,7 +44,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -68,7 +68,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -92,7 +92,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -115,7 +115,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -138,7 +138,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -162,7 +162,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
@@ -186,7 +186,7 @@ services:
     - MASTERNODE=172.29.5.1
     - WITNESS=172.29.5.2,172.29.5.3
     - DELEGATE=172.29.5.4,172.29.5.5,172.29.5.6,172.29.5.7
-    - TEST_NAME=bootstrap
+    - TEST_NAME=pump_it
     image: cilantro_base.dev
     networks:
       cilantro:
