--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,6 @@ __pycache__/
 .cache/
 cilantro.egg-info/
 
-# FOR DEMO
-cilantro/faucet.json
-
 # LOGS
 **/logs
 
@@ -28,3 +25,5 @@ cilantro/faucet.json
 cilantro/protocol/networks/data
 
 tests/vmnet/docker-compose.yml
+
+.DS_store
