--- a/tests/vmnet/compose_files/cilantro-nodes.yml
+++ b/tests/vmnet/compose_files/cilantro-nodes.yml
@@ -11,8 +11,8 @@ services:
   base:
     build:
       context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base
-    image: cilantro_base
+      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
+    image: cilantro_base.dev
     volumes:
       - type: bind
         source: /storage/docker/mysql-datadir
@@ -26,8 +26,8 @@ services:
       - 16
     build:
       context: ${LOCAL_PATH}/cilantro
-      dockerfile: ${DOCKER_DIR}/cilantro_base
-    image: cilantro_base
+      dockerfile: ${DOCKER_DIR}/cilantro_base.dev
+    image: cilantro_base.dev
     volumes:
       - type: bind
         source: ${LOCAL_PATH}/cilantro
