--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install coverage
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
-script: python -m unittest discover -s ./tests
+script: python ./tests/cilantro_tests.py
 notifications:
   webhooks:
     - https://lamden-discord-travisci.herokuapp.com/webhook/
