--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - pip install coverage
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
+  - python setup.py develop
 script: python ./tests/protocol/statemachine/test_state.py
 notifications:
   webhooks:
