--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ install:
   - pip install -r requirements.txt
   - pip install -r dev-requirements.txt
   - python setup.py develop
+before_script:
+  - pip install flake8  # should be moved into dev-requirements.txt
+  # stop the build if there are Python syntax errors or undefined names
+  - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+  # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+  - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 script: python ./tests/protocol/statemachine/test_state.py
 notifications:
   webhooks:
